# DyeDatic

./: .gitignore  README.md  biliverdin_colour_vs_pH.py  emodin_colour_vs_pH.py  generate_inputs.py  orcein_colour_vs_pH.py  plot_experimental_spectra_SI.py  pyproject.toml  quinalizarin_colour_vs_pH.py
data/: pigment_ph_SI.csv  pigments.csv
mpnn_training/: chemprop_hyperopt.py  predict.py
mpnn_training/.ipynb_checkpoints/: prepare_dataset-checkpoint.ipynb
mpnn_training/data/: 20210205_all_expt_data_no_duplicates_solvent_calcs.csv  data_all.csv  test_natural.csv
mpnn_training/hyperopt/: best_param.json
mpnn_training/hyperopt/best_params/fold_0/: test_scores.json
mpnn_training/hyperopt/best_params/fold_0/model_0/: model_v2.pt
mpnn_training/hyperopt/best_params/fold_1/: test_scores.json
mpnn_training/hyperopt/best_params/fold_1/model_0/: model_v2.pt
mpnn_training/hyperopt/best_params/fold_2/: test_scores.json
mpnn_training/hyperopt/best_params/fold_2/model_0/: model_v2.pt
mpnn_training/hyperopt/best_params/fold_3/: test_scores.json
mpnn_training/hyperopt/best_params/fold_3/model_0/: model_v2.pt
mpnn_training/hyperopt/best_params/fold_4/: test_scores.json
mpnn_training/hyperopt/best_params/fold_4/model_0/: model_v2.pt
src/: convert_spectrum_to_colour.py  ionisation.py  optimize_xtb.py  orca_inputs.py  tautomers.py  utils.py
